# vnc-use

./: .env.example  .gitignore  Dockerfile  HITL_VERIFICATION.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  TESTING.md  docker-compose.yml  docker-entrypoint.sh  instructions.md  pyproject.toml  test_browser_search.py
src/vnc_use/: __init__.py  agent.py  cli.py  credential_store.py  credentials_cli.py  logging_utils.py  mcp_cli.py  mcp_server.py  safety.py  types.py
src/vnc_use/backends/: vnc.py
src/vnc_use/planners/: __init__.py  anthropic.py  base.py  gemini.py  vnc_tools.py
tests/: __init__.py  test_browser_search.py  test_e2e.py  test_gemini_wrapper.py  test_hitl.py  test_hitl_integration.py  test_mcp_hitl.py  test_mcp_http_heise.py  test_mcp_server.py  test_multi_model.py  test_shell_commands.py  test_vnc_backend.py
